--- a/myfridge/templates/myfridge/ingredient_list.html
+++ b/myfridge/templates/myfridge/ingredient_list.html
@@ -1,7 +1,10 @@
 {% if ingredients %}
+	<ul>
 	{% for ingredient in ingredients %}
-		{{ ingredient }}
+		<li>{{ ingredient }}</li>
 	{% endfor %}
+	</ul>
 {% else %}
 	<p>No ingredients in the system.</p>
 {% endif %}
+<a href="{% url 'ingredient_new' %}">+</a>
