--- a/myfridge/templates/myfridge/recipe_detail.html
+++ b/myfridge/templates/myfridge/recipe_detail.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'myfridge/style.css' %}" />
 <h1>{{ recipe.title }}</h1>
 <p>{{recipe.description}}</p>
 {% if recipe.ingredients.all %}
