cleanup and more generic views

--- a/myfridge/templates/myfridge/ingredient_list.html
+++ b/myfridge/templates/myfridge/ingredient_list.html
@@ -7,4 +7,4 @@
 {% else %}
 	<p>No ingredients in the system.</p>
 {% endif %}
-<a href="{% url 'ingredient_new' %}">+</a>
+<a href="{% url 'myfridge:ingredient-new' %}">+</a>
