--- a/myfridge/templates/myfridge/recipe_list.html
+++ b/myfridge/templates/myfridge/recipe_list.html
@@ -2,7 +2,7 @@
 	<ul>
 	{% for recipe in recipe_list %}
 		<li><a href="{% url 'myfridge:recipe-detail' recipe.id %}">
-		{{recipe.title}}</a></li>
+		{{recipe.title}}<a></li>
 	{% endfor %}
 	</ul>
 {% else %}
