--- a/myfridge/templates/myfridge/base.html
+++ b/myfridge/templates/myfridge/base.html
@@ -7,16 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'myfridge/style.css' %}" />
 	</head>
 	<body>
-		{% if fridge_list %}
-			<h1>Refrigerators</h1>
-			<ul>
-			{% for fridge in fridge_list.all %}
-				<li><a href="{% url 'myfridge:fridge-detail' fridge.id %}">
-				{{fridge}}</a></li>
-			{% endfor %}
-			</ul>
-		{% else %}
-			<p>No fridges in the system.</p>
-		{% endif %}
+		{% block content %}
+		{% endblock %}
 	</body>
 </html>
