--- a/myfridge/templates/myfridge/ingredient_list.html
+++ b/myfridge/templates/myfridge/ingredient_list.html
@@ -1,10 +1,22 @@
-{% if ingredients %}
-	<ul>
-	{% for ingredient in ingredients %}
-		<li>{{ ingredient }}</li>
-	{% endfor %}
-	</ul>
-{% else %}
-	<p>No ingredients in the system.</p>
-{% endif %}
-<a href="{% url 'myfridge:ingredient-new' %}">+</a>
+{% load static %}
+<html>
+	<head>
+		<title>My Fridge</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" type="text/css" href="{% static 'myfridge/style.css' %}" />
+	</head>
+	<body>
+		{% if ingredients %}
+			<h1>Ingredients</h1>
+			<ul>
+			{% for ingredient in ingredients %}
+				<li>{{ ingredient }}</li>
+			{% endfor %}
+			</ul>
+		{% else %}
+			<p>No ingredients in the system.</p>
+		{% endif %}
+		<a href="{% url 'myfridge:ingredient-new' %}"><span class="glyphicon glyphicon-plus"></span></a>
+	</body>
+</html>
