--- a/myfridge/templates/myfridge/recipe_detail.html
+++ b/myfridge/templates/myfridge/recipe_detail.html
@@ -1,12 +1,21 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'myfridge/style.css' %}" />
-<h1>{{ recipe.title }}</h1>
-<p>{{recipe.description}}</p>
-{% if recipe.ingredients.all %}
-	<dl>
-	{% for recipeingredient in recipe.recipeingredient_set.all %}
-		<dt>{{recipeingredient.ingredient.name}}</dt>
-		<dd>{{recipeingredient.quantity}}</dd>
-	{% endfor %}
-	</dl>
-{% endif %}
+<html>
+	<head>
+		<title>My Fridge</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" type="text/css" href="{% static 'myfridge/style.css' %}" />
+	</head>
+	<body>
+		<h1>{{ recipe.title }}</h1>
+		<p>{{recipe.description}}</p>
+		{% if recipe.ingredients.all %}
+			<dl>
+			{% for recipeingredient in recipe.recipeingredient_set.all %}
+				<dt>{{recipeingredient.ingredient.name}}:</dt>
+				<dd>{{recipeingredient.quantity}}</dd>
+			{% endfor %}
+			</dl>
+		{% endif %}
+	</body>
+</html>
