--- a/myfridge/templates/myfridge/recipe_list.html
+++ b/myfridge/templates/myfridge/recipe_list.html
@@ -1,10 +1,22 @@
-{% if recipe_list %}
-	<ul>
-	{% for recipe in recipe_list %}
-		<li><a href="{% url 'myfridge:recipe-detail' recipe.id %}">
-		{{recipe.title}}<a></li>
-	{% endfor %}
-	</ul>
-{% else %}
-	<p>No recipes in the system.</p>
-{% endif %}
+{% load static %}
+<html>
+	<head>
+		<title>My Fridge</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" type="text/css" href="{% static 'myfridge/style.css' %}" />
+	</head>
+	<body>
+		{% if recipe_list %}
+			<h1>Recipes</h1>
+			<ul>
+			{% for recipe in recipe_list %}
+				<li><a href="{% url 'myfridge:recipe-detail' recipe.id %}">
+				{{recipe.title}}</a></li>
+			{% endfor %}
+			</ul>
+		{% else %}
+			<p>No recipes in the system.</p>
+		{% endif %}
+	</body>
+</html>
