--- a/myfridge/templates/myfridge/fridge_detail.html
+++ b/myfridge/templates/myfridge/fridge_detail.html
@@ -1,20 +1,13 @@
-{% load static %}
-<html>
-	<head>
-		<title>My Fridge</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" type="text/css" href="{% static 'myfridge/style.css' %}" />
-	</head>
-	<body>
-		<h1>{{ fridge }}</h1>
-		{% if fridge.ingredients.all %}
-			<dl>
-			{% for fridgecontent in fridge.fridgecontents_set.all %}
-				<dt>{{fridgecontent.ingredient.name}}:</dt>
-				<dd>{{fridgecontent.quantity}}</dd>
-			{% endfor %}
-			</dl>
-		{% endif %}
-	</body>
-</html>
+{% extends 'myfridge/base.html' %}
+
+{% block content %}
+	<h1>{{ fridge }}</h1>
+	{% if fridge.ingredients.all %}
+		<dl>
+		{% for fridgecontent in fridge.fridgecontents_set.all %}
+			<dt>{{fridgecontent.ingredient.name}}:</dt>
+			<dd>{{fridgecontent.quantity}}</dd>
+		{% endfor %}
+		</dl>
+	{% endif %}
+{% endblock %}
