--- a/myfridge/templates/myfridge/ingredient_edit.html
+++ b/myfridge/templates/myfridge/ingredient_edit.html
@@ -1,16 +1,9 @@
-{% load static %}
-<html>
-	<head>		
-		<title>My Fridge</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" type="text/css" href="{% static 'myfridge/style.css' %}" />
-	</head>
-	<body>
-		<h1>New ingredient</h1>
-		<form method="post">{% csrf_token %}
-			{{ form.as_p }}
-			<button type="submit">Save</button>
-		</form>
-	</body>
-</html>
+{% extends 'myfridge/base.html' %}
+
+{% block content %}
+	<h1>New ingredient</h1>
+	<form method="post">{% csrf_token %}
+		{{ form.as_p }}
+		<button type="submit">Save</button>
+	</form>
+{% endblock %}
