simple back buttons

--- a/myfridge/templates/myfridge/fridge_detail.html
+++ b/myfridge/templates/myfridge/fridge_detail.html
@@ -10,4 +10,5 @@
 		{% endfor %}
 		</dl>
 	{% endif %}
+	<a href="{% url 'myfridge:fridge-list' %}"><span class="glyphicon glyphicon-chevron-left" /></a>
 {% endblock %}
