--- a/myfridge/templates/myfridge/recipe_detail.html
+++ b/myfridge/templates/myfridge/recipe_detail.html
@@ -11,4 +11,5 @@
 		{% endfor %}
 		</dl>
 	{% endif %}
+	<a href="{% url 'myfridge:recipe-list' %}"><span class="glyphicon glyphicon-chevron-left" /></a>
 {% endblock %}
