--- a/myfridge/templates/myfridge/ingredient_list.html
+++ b/myfridge/templates/myfridge/ingredient_list.html
@@ -11,5 +11,6 @@
 	{% else %}
 		<p>No ingredients in the system.</p>
 	{% endif %}
+	<a href="{% url 'myfridge:index' %}"><span class="glyphicon glyphicon-chevron-left"></span></a>
 	<a href="{% url 'myfridge:ingredient-new' %}"><span class="glyphicon glyphicon-plus"></span></a>
 {% endblock %}
