--- a/myfridge/templates/myfridge/recipe_list.html
+++ b/myfridge/templates/myfridge/recipe_list.html
@@ -12,4 +12,5 @@
 	{% else %}
 		<p>No recipes in the system.</p>
 	{% endif %}
+	<a href="{% url 'myfridge:index' %}"><span class="glyphicon glyphicon-chevron-left"></span></a>
 {% endblock %}
