Matching fridge to recipe page

--- a/myfridge/templates/myfridge/fridge_detail.html
+++ b/myfridge/templates/myfridge/fridge_detail.html
@@ -11,4 +11,5 @@
 		</dl>
 	{% endif %}
 	<a href="{% url 'myfridge:fridge-list' %}"><span class="glyphicon glyphicon-chevron-left" /></a>
+	<a href="{% url 'myfridge:fridge-match' fridge.id %}"><span class="glyphicon glyphicon-book" /></a>
 {% endblock %}
